낙관적 락킹 필요 없음, 제거